--- a/ContactManager/Views/Contact/Create.cshtml
+++ b/ContactManager/Views/Contact/Create.cshtml
@@ -77,4 +77,8 @@
 
 </script>
 
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5N8RM2dWX4-wTYXpDNdWBGIFL_0dzI4g&libraries=places&callback=initMap" async defer></script>
+
+
 }
