--- a/ContactManager/wwwroot/css/site.css
+++ b/ContactManager/wwwroot/css/site.css
@@ -20,3 +20,16 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.map {
+    height: 300px; /* Adjust height as needed */
+    width: auto; /* Ensure full width */
+    position: relative; /* Ensure proper positioning */
+    overflow: hidden; /* Ensure overflow is hidden */
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.pac-container {
+    z-index: 10000; /* Ensure a high enough z-index */
+}
