Get Google Map Api From Appsetting

--- a/ContactManager/Views/Contact/Create.cshtml
+++ b/ContactManager/Views/Contact/Create.cshtml
@@ -78,7 +78,7 @@
 </script>
 
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5N8RM2dWX4-wTYXpDNdWBGIFL_0dzI4g&libraries=places&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=@(ViewBag.GoogleMapAPI)&libraries=places&callback=initMap" async defer></script>
 
 
 }
