--- a/ContactManager/Views/Contact/Index.cshtml
+++ b/ContactManager/Views/Contact/Index.cshtml
@@ -200,6 +200,6 @@
   
         </script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC5N8RM2dWX4-wTYXpDNdWBGIFL_0dzI4g&libraries=places&callback=initMap" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=@(ViewBag.GoogleMapAPI)&libraries=places&callback=initMap" async defer></script>
 
    }
